--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,22 +1,16 @@
 server {
     listen 80;
-    server_name localhost;
-
-    root /var/www/auto_gestor/public;
     index index.php index.html;
-
+    server_name localhost;
+    root /var/www/auto_gestor/public;
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
-
     location ~ \.php$ {
-        include fastcgi_params;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
+        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location ~ /\.ht {
-        deny all;
     }
 }
